Change transactions endpoint logic
-Remove name and date endpoints

-Add a filter endpoint with all necessary parameters

-Remove name and date service methods

-Add a filter method

-Change repository methods to adapt to the new crud method, and add sorting

-Remove name and date crud methods

-Add a filter method with the query to search for all parameters

-Remove name and date consume methods

-Add filter consume method

Change how is send the data from transactions page

Add translations to month parameters, and transaction type parameters