@@ -57,9 +57,11 @@ public class TransactionCrudRepositoryTest {
    void findByIdAccount() {
       PageRequest pageable = PageRequest.of(0, 5);
 
-      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByIdAccount(1, pageable);
+      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByIdAccount(
+              1, pageable);
 
-      Page<TransactionEntity> errorTransactionEntity = transactionCrudRepository.findByIdAccount(453, pageable);
+      Page<TransactionEntity> errorTransactionEntity = transactionCrudRepository.findByIdAccount(
+              453, pageable);
 
       assertAll(
               () -> assertTrue(errorTransactionEntity.isEmpty()),
@@ -82,7 +84,8 @@ public class TransactionCrudRepositoryTest {
                       transactionEntityList.stream().map(transaction -> transaction.getTransactionAmount().toString()).toList()),
 
               () -> assertEquals(List.of(
-                              TransactionType.WIRE_TRANSFER, TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT, TransactionType.DEPOSIT, TransactionType.WIRE_TRANSFER),
+                              TransactionType.WIRE_TRANSFER, TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT,
+                              TransactionType.DEPOSIT, TransactionType.WIRE_TRANSFER),
                       transactionEntityList.stream().map(TransactionEntity::getTransactionType).toList()),
 
               () -> assertEquals(List.of(
@@ -97,75 +100,33 @@ public class TransactionCrudRepositoryTest {
 
    @Test
    @Sql("/db/bankaccount_data.sql")
-   @DisplayName("Should return all transactionEntities with a specific idAccount and name of the data.sql")
-   void findByIdAccountAndNameContaining() {
-      PageRequest pageable = PageRequest.of(0, 5);
-
-      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByIdAccountAndReceiverNameContainingIgnoreCase(1, "ma", pageable);
-
-      Page<TransactionEntity> errorTransactionEntity = transactionCrudRepository.findByIdAccountAndReceiverNameContainingIgnoreCase(453, "Ma", pageable);
-
-      assertAll(
-              () -> assertTrue(errorTransactionEntity.isEmpty()),
-              () -> assertThat(transactionEntityList.getTotalPages()).isEqualTo(2),
-              () -> assertFalse(transactionEntityList.isLast()),
-              () -> assertThat(transactionEntityList.getSize()).isEqualTo(5),
-              () -> assertThat(transactionEntityList.getNumberOfElements()).isEqualTo(5),
-              () -> assertThat(transactionEntityList.getTotalElements()).isEqualTo(6L),
-
-              () -> assertEquals(List.of(1, 1, 1, 1, 1),
-                      transactionEntityList.stream().map(TransactionEntity::getIdAccount).toList()),
-
-              () -> assertEquals(List.of(2, 2, 2, 2, 2),
-                      transactionEntityList.stream().map(TransactionEntity::getIdTransferAccount).toList()),
-
-              () -> assertEquals(List.of("Maria", "Maria", "Maria", "Maria", "Maria"),
-                      transactionEntityList.stream().map(TransactionEntity::getReceiverName).toList()),
-
-              () -> assertEquals(List.of("6000.00", "400.00", "300.00", "400.00", "400.00"),
-                      transactionEntityList.stream().map(transaction -> transaction.getTransactionAmount().toString()).toList()),
-
-              () -> assertEquals(List.of(
-                              TransactionType.WIRE_TRANSFER, TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT),
-                      transactionEntityList.stream().map(TransactionEntity::getTransactionType).toList()),
-
-              () -> assertEquals(List.of(
-                              LocalDateTime.of(2022, Month.OCTOBER, 9, 20, 10, 12),
-                              LocalDateTime.of(2023, Month.OCTOBER, 9, 20, 10, 12),
-                              LocalDateTime.of(2023, Month.OCTOBER, 9, 20, 10, 12),
-                              LocalDateTime.of(2022, Month.OCTOBER, 9, 20, 10, 12),
-                              LocalDateTime.of(2022, Month.OCTOBER, 9, 20, 10, 12)),
-                      transactionEntityList.stream().map(TransactionEntity::getTransactionTimestamp).toList())
-      );
-   }
-
-   @Test
-   @Sql("/db/bankaccount_data.sql")
-   @DisplayName("Should return all transactionEntities by idAccount and year in the data.sql")
-   void findByIdAccountAndTransactionTimestampBetween() {
+   @DisplayName("Should return all transactionEntities by idAccount, type, name, and date in the data.sql")
+   void findByFilter() {
       LocalDateTime startTime = LocalDateTime.of(2022, Month.OCTOBER, 1, 0, 10, 0);
       LocalDateTime endTime = LocalDateTime.of(2022, Month.OCTOBER, 31, 20, 10, 0);
 
       PageRequest pageable = PageRequest.of(0, 10);
 
-      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByIdAccountAndTransactionTimestampBetweenAndReceiverNameContainingIgnoreCase(
-              1, startTime, endTime, "ma", pageable);
+      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByFilter(
+              1, TransactionType.ONLINE_PAYMENT, "ma", startTime, endTime, pageable);
 
 
-      Page<TransactionEntity> errorTransactionEntity = transactionCrudRepository.findByIdAccountAndTransactionTimestampBetweenAndReceiverNameContainingIgnoreCase(3243,
-              LocalDateTime.of(2026, Month.OCTOBER, 9, 20, 10, 0),
-              LocalDateTime.of(2026, Month.OCTOBER, 9, 20, 10, 0),
+      Page<TransactionEntity> errorTransactionEntity = transactionCrudRepository.findByFilter(
+              3243,
+              TransactionType.ONLINE_PAYMENT,
               "",
+              LocalDateTime.of(2026, Month.OCTOBER, 9, 20, 10, 0),
+              LocalDateTime.of(2026, Month.OCTOBER, 9, 20, 10, 0),
               pageable);
 
       assertAll(
               () -> assertTrue(errorTransactionEntity.isEmpty()),
-              () -> assertThat(transactionEntityList.getContent().size()).isEqualTo(3),
-              () -> assertEquals(List.of(1, 1, 1), transactionEntityList.stream().map(TransactionEntity::getIdAccount).toList()),
-              () -> assertEquals(Arrays.asList(2, 2, 2), transactionEntityList.stream().map(TransactionEntity::getIdTransferAccount).collect(Collectors.toList())),
-              () -> assertEquals(List.of("Maria", "Maria", "Maria"), transactionEntityList.stream().map(TransactionEntity::getReceiverName).toList()),
-              () -> assertEquals(List.of("6000.00", "400.00", "400.00"), transactionEntityList.stream().map(transaction -> transaction.getTransactionAmount().toString()).toList()),
-              () -> assertEquals(List.of(TransactionType.WIRE_TRANSFER, TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT),
+              () -> assertThat(transactionEntityList.getContent().size()).isEqualTo(2),
+              () -> assertEquals(List.of(1, 1), transactionEntityList.stream().map(TransactionEntity::getIdAccount).toList()),
+              () -> assertEquals(Arrays.asList(2, 2), transactionEntityList.stream().map(TransactionEntity::getIdTransferAccount).collect(Collectors.toList())),
+              () -> assertEquals(List.of("Maria", "Maria"), transactionEntityList.stream().map(TransactionEntity::getReceiverName).toList()),
+              () -> assertEquals(List.of("400.00", "400.00"), transactionEntityList.stream().map(transaction -> transaction.getTransactionAmount().toString()).toList()),
+              () -> assertEquals(List.of(TransactionType.ONLINE_PAYMENT, TransactionType.ONLINE_PAYMENT),
                       transactionEntityList.stream().map(TransactionEntity::getTransactionType).toList()),
               () -> assertTrue(transactionEntityList.stream().map((transaction) ->
                       transaction.getTransactionTimestamp().getYear()).allMatch((year) -> year == 2022)),
@@ -223,7 +184,8 @@ public class TransactionCrudRepositoryTest {
       PageRequest pageable = PageRequest.of(0, 3);
       transactionCrudRepository.updateNameByIdAccount(1, "TEst");
 
-      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByIdAccountAndReceiverNameContainingIgnoreCase(1, "TEst", pageable);
+      Page<TransactionEntity> transactionEntityList = transactionCrudRepository.findByFilter(
+              1, null, "TEst", null, null, pageable);
 
       assertAll(
               () -> assertThat(transactionEntityList.getContent().size()).isEqualTo(2),
